compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_import_not_from_indirect_dependency.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1015
expression: "import gleam\n\npub fn main() {\n  0\n}"
---
import gle|am

pub fn main() {
  0
}


----- Completion content -----
example_module
  kind:   Module
  edits:
    [0:7-0:7]: "example_module"
