compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_unqualified_import.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "completion(TestProject::for_source(code).add_module(\"dep\", dep),\n    Position::new(1, 12))"
---
[
    CompletionItem {
        label: "Wibble",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 12,
                        },
                        end: Position {
                            line: 1,
                            character: 12,
                        },
                    },
                    new_text: "type Wibble",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "myfun()",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "dep",
                ),
            },
        ),
        kind: Some(
            Function,
        ),
        detail: Some(
            "fn() -> Int",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 12,
                        },
                        end: Position {
                            line: 1,
                            character: 12,
                        },
                    },
                    new_text: "myfun()",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "wabble",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "dep",
                ),
            },
        ),
        kind: Some(
            Constant,
        ),
        detail: Some(
            "String",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 12,
                        },
                        end: Position {
                            line: 1,
                            character: 12,
                        },
                    },
                    new_text: "wabble",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "wibble",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "dep",
                ),
            },
        ),
        kind: Some(
            Constant,
        ),
        detail: Some(
            "String",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 12,
                        },
                        end: Position {
                            line: 1,
                            character: 12,
                        },
                    },
                    new_text: "wibble",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
