compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_unqualified_import_already_imported.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "completion(TestProject::for_source(code).add_module(\"dep\", dep),\n    Position::new(1, 12))"
---
[
    CompletionItem {
        label: "myfun",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: Some(
                    " fn() -> Int",
                ),
                description: Some(
                    "dep",
                ),
            },
        ),
        kind: Some(
            Function,
        ),
        detail: Some(
            "fn() -> Int",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 12,
                        },
                        end: Position {
                            line: 1,
                            character: 18,
                        },
                    },
                    new_text: "myfun",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
