compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_function_labels.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nfn wibble(wibble arg1: String, wobble arg2: String) {\n  arg1 <> arg2\n}\n  \nfn fun() { // completion inside parens below includes labels\n  let wibble = wibble()\n}\n"
---
fn wibble(wibble arg1: String, wobble arg2: String) {
  arg1 <> arg2
}
  
fn fun() { // completion inside parens below includes labels
  let wibble = wibble()
}


----- Completion content -----
[
    CompletionItem {
        label: "fun",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "app",
                ),
            },
        ),
        kind: Some(
            Function,
        ),
        detail: Some(
            "fn() -> String",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 6,
                            character: 23,
                        },
                        end: Position {
                            line: 6,
                            character: 23,
                        },
                    },
                    new_text: "fun",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "wibble",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "app",
                ),
            },
        ),
        kind: Some(
            Function,
        ),
        detail: Some(
            "fn(String, String) -> String",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 6,
                            character: 23,
                        },
                        end: Position {
                            line: 6,
                            character: 23,
                        },
                    },
                    new_text: "wibble",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "wibble:",
        label_details: None,
        kind: Some(
            Field,
        ),
        detail: Some(
            "String",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "wobble:",
        label_details: None,
        kind: Some(
            Field,
        ),
        detail: Some(
            "String",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
