compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_record_access.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, wobble: Int)\n  Wobble(wabble: Int, wobble: Int)\n}\n  \nfn fun() {\n  let wibble = Wibble(1, 2)\n  wibble.wobble\n}\n"
---
pub type Wibble {
  Wibble(wibble: Int, wobble: Int)
  Wobble(wabble: Int, wobble: Int)
}
  
fn fun() {
  let wibble = Wibble(1, 2)
  wibble.wobble
}


----- Completion content -----
[
    CompletionItem {
        label: "wobble",
        label_details: None,
        kind: Some(
            Field,
        ),
        detail: Some(
            "Int",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
